SintacticAnalysis/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DEFAULT
    SUMA

Grammar

Rule 0     S' -> Start
Rule 1     Start -> code
Rule 2     Start -> empty
Rule 3     code -> INICIO DOSPUNTOS cuerpo FIN PUNTOCOMA procedimiento
Rule 4     cuerpo -> variable
Rule 5     cuerpo -> expresion
Rule 6     variable -> sinini PUNTOCOMA cuerpo
Rule 7     variable -> ini PUNTOCOMA cuerpo
Rule 8     variable -> empty empty empty
Rule 9     sinini -> DCL ID
Rule 10    ini -> DCL ID IGUAL NUMERO
Rule 11    expresion -> condicion1 expresion
Rule 12    expresion -> condicion2 expresion
Rule 13    expresion -> repita expresion
Rule 14    expresion -> hacer expresion
Rule 15    expresion -> funcion expresion
Rule 16    expresion -> llamarProc expresion
Rule 17    expresion -> empty empty
Rule 18    condicion1 -> ENCASO cond1Aux1 FINENCASO PUNTOCOMA
Rule 19    cond1Aux1 -> cond1Aux2 SINO LLAVE_IZQ expresion LLAVE_DER
Rule 20    cond1Aux1 -> empty empty empty empty empty
Rule 21    cond1Aux2 -> CUANDO ID condicion sentencia ENTONS LLAVE_IZQ expresion LLAVE_DER cond1Aux2
Rule 22    cond1Aux2 -> empty empty empty empty empty empty empty empty empty
Rule 23    condicion2 -> ENCASO ID cond2Aux1 FINENCASO PUNTOCOMA
Rule 24    cond2Aux1 -> cond2Aux2 SINO LLAVE_IZQ expresion LLAVE_DER
Rule 25    cond2Aux1 -> empty empty empty empty empty
Rule 26    cond2Aux2 -> CUANDO condicion sentencia ENTONS LLAVE_IZQ expresion LLAVE_DER cond2Aux2
Rule 27    cond2Aux2 -> empty empty empty empty empty empty empty empty
Rule 28    condicion -> IGUAL
Rule 29    condicion -> MAYOR
Rule 30    condicion -> MENOR
Rule 31    condicion -> DIFERENTE
Rule 32    condicion -> MAYORIGUAL
Rule 33    condicion -> MENORIGUAL
Rule 34    sentencia -> ID
Rule 35    sentencia -> NUMERO
Rule 36    repita -> REPITA LLAVE_IZQ expresion LLAVE_DER HASTAENCONTRAR ID condicion sentencia PUNTOCOMA
Rule 37    hacer -> DESDE ID IGUAL sentencia HASTA sentencia HAGA LLAVE_IZQ expresion LLAVE_DER FINDESDE PUNTOCOMA
Rule 38    funcion -> Aleatorio
Rule 39    funcion -> Mover
Rule 40    funcion -> funcionAlge
Rule 41    Aleatorio -> ALEATORIO PARENTESIS_IZQ PARENTESIS_DER PUNTOCOMA
Rule 42    Mover -> MOVER PARENTESIS_IZQ paramMover PARENTESIS_DER PUNTOCOMA
Rule 43    paramMover -> AF
Rule 44    paramMover -> F
Rule 45    paramMover -> DFA
Rule 46    paramMover -> IFA
Rule 47    paramMover -> DFB
Rule 48    paramMover -> IFB
Rule 49    paramMover -> A
Rule 50    paramMover -> DAA
Rule 51    paramMover -> IAA
Rule 52    paramMover -> DAB
Rule 53    paramMover -> IAB
Rule 54    paramMover -> AA
Rule 55    funcionAlge -> INC PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA
Rule 56    funcionAlge -> DEC PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA
Rule 57    funcionAlge -> INI PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA
Rule 58    procedimiento -> PROC ID PARENTESIS_IZQ parametro PARENTESIS_DER INICIOPROC DOSPUNTOS expresion FINPROC PUNTOCOMA procedimiento
Rule 59    procedimiento -> empty empty empty empty empty empty empty empty empty empty empty
Rule 60    parametro -> ID COMA parametro
Rule 61    parametro -> ID empty empty
Rule 62    parametro -> NUMERO COMA parametro
Rule 63    parametro -> NUMERO empty empty
Rule 64    llamarProc -> LLAMAR ID PARENTESIS_IZQ parametro PARENTESIS_DER PUNTOCOMA
Rule 65    empty -> <empty>

Terminals, with rules where they appear

A                    : 49
AA                   : 54
AF                   : 43
ALEATORIO            : 41
COMA                 : 55 56 57 60 62
CUANDO               : 21 26
DAA                  : 50
DAB                  : 52
DCL                  : 9 10
DEC                  : 56
DEFAULT              : 
DESDE                : 37
DFA                  : 45
DFB                  : 47
DIFERENTE            : 31
DOSPUNTOS            : 3 58
ENCASO               : 18 23
ENTONS               : 21 26
F                    : 44
FIN                  : 3
FINDESDE             : 37
FINENCASO            : 18 23
FINPROC              : 58
HAGA                 : 37
HASTA                : 37
HASTAENCONTRAR       : 36
IAA                  : 51
IAB                  : 53
ID                   : 9 10 21 23 34 36 37 55 56 57 58 60 61 64
IFA                  : 46
IFB                  : 48
IGUAL                : 10 28 37
INC                  : 55
INI                  : 57
INICIO               : 3
INICIOPROC           : 58
LLAMAR               : 64
LLAVE_DER            : 19 21 24 26 36 37
LLAVE_IZQ            : 19 21 24 26 36 37
MAYOR                : 29
MAYORIGUAL           : 32
MENOR                : 30
MENORIGUAL           : 33
MOVER                : 42
NUMERO               : 10 35 62 63
PARENTESIS_DER       : 41 42 55 56 57 58 64
PARENTESIS_IZQ       : 41 42 55 56 57 58 64
PROC                 : 58
PUNTOCOMA            : 3 6 7 18 23 36 37 41 42 55 56 57 58 64
REPITA               : 36
SINO                 : 19 24
SUMA                 : 
error                : 

Nonterminals, with rules where they appear

Aleatorio            : 38
Mover                : 39
Start                : 0
code                 : 1
cond1Aux1            : 18
cond1Aux2            : 19 21
cond2Aux1            : 23
cond2Aux2            : 24 26
condicion            : 21 26 36
condicion1           : 11
condicion2           : 12
cuerpo               : 3 6 7
empty                : 2 8 8 8 17 17 20 20 20 20 20 22 22 22 22 22 22 22 22 22 25 25 25 25 25 27 27 27 27 27 27 27 27 59 59 59 59 59 59 59 59 59 59 59 61 61 63 63
expresion            : 5 11 12 13 14 15 16 19 21 24 26 36 37 58
funcion              : 15
funcionAlge          : 40
hacer                : 14
ini                  : 7
llamarProc           : 16
paramMover           : 42
parametro            : 58 60 62 64
procedimiento        : 3 58
repita               : 13
sentencia            : 21 26 36 37 37 55 56 57
sinini               : 6
variable             : 4

Parsing method: LALR

state 0

    (0) S' -> . Start
    (1) Start -> . code
    (2) Start -> . empty
    (3) code -> . INICIO DOSPUNTOS cuerpo FIN PUNTOCOMA procedimiento
    (65) empty -> .

    INICIO          shift and go to state 4
    $end            reduce using rule 65 (empty -> .)

    Start                          shift and go to state 1
    code                           shift and go to state 2
    empty                          shift and go to state 3

state 1

    (0) S' -> Start .



state 2

    (1) Start -> code .

    $end            reduce using rule 1 (Start -> code .)


state 3

    (2) Start -> empty .

    $end            reduce using rule 2 (Start -> empty .)


state 4

    (3) code -> INICIO . DOSPUNTOS cuerpo FIN PUNTOCOMA procedimiento

    DOSPUNTOS       shift and go to state 5


state 5

    (3) code -> INICIO DOSPUNTOS . cuerpo FIN PUNTOCOMA procedimiento
    (4) cuerpo -> . variable
    (5) cuerpo -> . expresion
    (6) variable -> . sinini PUNTOCOMA cuerpo
    (7) variable -> . ini PUNTOCOMA cuerpo
    (8) variable -> . empty empty empty
    (11) expresion -> . condicion1 expresion
    (12) expresion -> . condicion2 expresion
    (13) expresion -> . repita expresion
    (14) expresion -> . hacer expresion
    (15) expresion -> . funcion expresion
    (16) expresion -> . llamarProc expresion
    (17) expresion -> . empty empty
    (9) sinini -> . DCL ID
    (10) ini -> . DCL ID IGUAL NUMERO
    (65) empty -> .
    (18) condicion1 -> . ENCASO cond1Aux1 FINENCASO PUNTOCOMA
    (23) condicion2 -> . ENCASO ID cond2Aux1 FINENCASO PUNTOCOMA
    (36) repita -> . REPITA LLAVE_IZQ expresion LLAVE_DER HASTAENCONTRAR ID condicion sentencia PUNTOCOMA
    (37) hacer -> . DESDE ID IGUAL sentencia HASTA sentencia HAGA LLAVE_IZQ expresion LLAVE_DER FINDESDE PUNTOCOMA
    (38) funcion -> . Aleatorio
    (39) funcion -> . Mover
    (40) funcion -> . funcionAlge
    (64) llamarProc -> . LLAMAR ID PARENTESIS_IZQ parametro PARENTESIS_DER PUNTOCOMA
    (41) Aleatorio -> . ALEATORIO PARENTESIS_IZQ PARENTESIS_DER PUNTOCOMA
    (42) Mover -> . MOVER PARENTESIS_IZQ paramMover PARENTESIS_DER PUNTOCOMA
    (55) funcionAlge -> . INC PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA
    (56) funcionAlge -> . DEC PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA
    (57) funcionAlge -> . INI PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA

    DCL             shift and go to state 18
    FIN             reduce using rule 65 (empty -> .)
    ENCASO          shift and go to state 19
    REPITA          shift and go to state 20
    DESDE           shift and go to state 21
    LLAMAR          shift and go to state 25
    ALEATORIO       shift and go to state 26
    MOVER           shift and go to state 27
    INC             shift and go to state 28
    DEC             shift and go to state 29
    INI             shift and go to state 30

    cuerpo                         shift and go to state 6
    variable                       shift and go to state 7
    expresion                      shift and go to state 8
    sinini                         shift and go to state 9
    ini                            shift and go to state 10
    empty                          shift and go to state 11
    condicion1                     shift and go to state 12
    condicion2                     shift and go to state 13
    repita                         shift and go to state 14
    hacer                          shift and go to state 15
    funcion                        shift and go to state 16
    llamarProc                     shift and go to state 17
    Aleatorio                      shift and go to state 22
    Mover                          shift and go to state 23
    funcionAlge                    shift and go to state 24

state 6

    (3) code -> INICIO DOSPUNTOS cuerpo . FIN PUNTOCOMA procedimiento

    FIN             shift and go to state 31


state 7

    (4) cuerpo -> variable .

    FIN             reduce using rule 4 (cuerpo -> variable .)


state 8

    (5) cuerpo -> expresion .

    FIN             reduce using rule 5 (cuerpo -> expresion .)


state 9

    (6) variable -> sinini . PUNTOCOMA cuerpo

    PUNTOCOMA       shift and go to state 32


state 10

    (7) variable -> ini . PUNTOCOMA cuerpo

    PUNTOCOMA       shift and go to state 33


state 11

    (8) variable -> empty . empty empty
    (17) expresion -> empty . empty
    (65) empty -> .

    FIN             reduce using rule 65 (empty -> .)

    empty                          shift and go to state 34

state 12

    (11) expresion -> condicion1 . expresion
    (11) expresion -> . condicion1 expresion
    (12) expresion -> . condicion2 expresion
    (13) expresion -> . repita expresion
    (14) expresion -> . hacer expresion
    (15) expresion -> . funcion expresion
    (16) expresion -> . llamarProc expresion
    (17) expresion -> . empty empty
    (18) condicion1 -> . ENCASO cond1Aux1 FINENCASO PUNTOCOMA
    (23) condicion2 -> . ENCASO ID cond2Aux1 FINENCASO PUNTOCOMA
    (36) repita -> . REPITA LLAVE_IZQ expresion LLAVE_DER HASTAENCONTRAR ID condicion sentencia PUNTOCOMA
    (37) hacer -> . DESDE ID IGUAL sentencia HASTA sentencia HAGA LLAVE_IZQ expresion LLAVE_DER FINDESDE PUNTOCOMA
    (38) funcion -> . Aleatorio
    (39) funcion -> . Mover
    (40) funcion -> . funcionAlge
    (64) llamarProc -> . LLAMAR ID PARENTESIS_IZQ parametro PARENTESIS_DER PUNTOCOMA
    (65) empty -> .
    (41) Aleatorio -> . ALEATORIO PARENTESIS_IZQ PARENTESIS_DER PUNTOCOMA
    (42) Mover -> . MOVER PARENTESIS_IZQ paramMover PARENTESIS_DER PUNTOCOMA
    (55) funcionAlge -> . INC PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA
    (56) funcionAlge -> . DEC PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA
    (57) funcionAlge -> . INI PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA

    ENCASO          shift and go to state 19
    REPITA          shift and go to state 20
    DESDE           shift and go to state 21
    LLAMAR          shift and go to state 25
    FIN             reduce using rule 65 (empty -> .)
    LLAVE_DER       reduce using rule 65 (empty -> .)
    FINPROC         reduce using rule 65 (empty -> .)
    ALEATORIO       shift and go to state 26
    MOVER           shift and go to state 27
    INC             shift and go to state 28
    DEC             shift and go to state 29
    INI             shift and go to state 30

    condicion1                     shift and go to state 12
    expresion                      shift and go to state 35
    condicion2                     shift and go to state 13
    repita                         shift and go to state 14
    hacer                          shift and go to state 15
    funcion                        shift and go to state 16
    llamarProc                     shift and go to state 17
    empty                          shift and go to state 36
    Aleatorio                      shift and go to state 22
    Mover                          shift and go to state 23
    funcionAlge                    shift and go to state 24

state 13

    (12) expresion -> condicion2 . expresion
    (11) expresion -> . condicion1 expresion
    (12) expresion -> . condicion2 expresion
    (13) expresion -> . repita expresion
    (14) expresion -> . hacer expresion
    (15) expresion -> . funcion expresion
    (16) expresion -> . llamarProc expresion
    (17) expresion -> . empty empty
    (18) condicion1 -> . ENCASO cond1Aux1 FINENCASO PUNTOCOMA
    (23) condicion2 -> . ENCASO ID cond2Aux1 FINENCASO PUNTOCOMA
    (36) repita -> . REPITA LLAVE_IZQ expresion LLAVE_DER HASTAENCONTRAR ID condicion sentencia PUNTOCOMA
    (37) hacer -> . DESDE ID IGUAL sentencia HASTA sentencia HAGA LLAVE_IZQ expresion LLAVE_DER FINDESDE PUNTOCOMA
    (38) funcion -> . Aleatorio
    (39) funcion -> . Mover
    (40) funcion -> . funcionAlge
    (64) llamarProc -> . LLAMAR ID PARENTESIS_IZQ parametro PARENTESIS_DER PUNTOCOMA
    (65) empty -> .
    (41) Aleatorio -> . ALEATORIO PARENTESIS_IZQ PARENTESIS_DER PUNTOCOMA
    (42) Mover -> . MOVER PARENTESIS_IZQ paramMover PARENTESIS_DER PUNTOCOMA
    (55) funcionAlge -> . INC PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA
    (56) funcionAlge -> . DEC PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA
    (57) funcionAlge -> . INI PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA

    ENCASO          shift and go to state 19
    REPITA          shift and go to state 20
    DESDE           shift and go to state 21
    LLAMAR          shift and go to state 25
    FIN             reduce using rule 65 (empty -> .)
    LLAVE_DER       reduce using rule 65 (empty -> .)
    FINPROC         reduce using rule 65 (empty -> .)
    ALEATORIO       shift and go to state 26
    MOVER           shift and go to state 27
    INC             shift and go to state 28
    DEC             shift and go to state 29
    INI             shift and go to state 30

    condicion2                     shift and go to state 13
    expresion                      shift and go to state 37
    condicion1                     shift and go to state 12
    repita                         shift and go to state 14
    hacer                          shift and go to state 15
    funcion                        shift and go to state 16
    llamarProc                     shift and go to state 17
    empty                          shift and go to state 36
    Aleatorio                      shift and go to state 22
    Mover                          shift and go to state 23
    funcionAlge                    shift and go to state 24

state 14

    (13) expresion -> repita . expresion
    (11) expresion -> . condicion1 expresion
    (12) expresion -> . condicion2 expresion
    (13) expresion -> . repita expresion
    (14) expresion -> . hacer expresion
    (15) expresion -> . funcion expresion
    (16) expresion -> . llamarProc expresion
    (17) expresion -> . empty empty
    (18) condicion1 -> . ENCASO cond1Aux1 FINENCASO PUNTOCOMA
    (23) condicion2 -> . ENCASO ID cond2Aux1 FINENCASO PUNTOCOMA
    (36) repita -> . REPITA LLAVE_IZQ expresion LLAVE_DER HASTAENCONTRAR ID condicion sentencia PUNTOCOMA
    (37) hacer -> . DESDE ID IGUAL sentencia HASTA sentencia HAGA LLAVE_IZQ expresion LLAVE_DER FINDESDE PUNTOCOMA
    (38) funcion -> . Aleatorio
    (39) funcion -> . Mover
    (40) funcion -> . funcionAlge
    (64) llamarProc -> . LLAMAR ID PARENTESIS_IZQ parametro PARENTESIS_DER PUNTOCOMA
    (65) empty -> .
    (41) Aleatorio -> . ALEATORIO PARENTESIS_IZQ PARENTESIS_DER PUNTOCOMA
    (42) Mover -> . MOVER PARENTESIS_IZQ paramMover PARENTESIS_DER PUNTOCOMA
    (55) funcionAlge -> . INC PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA
    (56) funcionAlge -> . DEC PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA
    (57) funcionAlge -> . INI PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA

    ENCASO          shift and go to state 19
    REPITA          shift and go to state 20
    DESDE           shift and go to state 21
    LLAMAR          shift and go to state 25
    FIN             reduce using rule 65 (empty -> .)
    LLAVE_DER       reduce using rule 65 (empty -> .)
    FINPROC         reduce using rule 65 (empty -> .)
    ALEATORIO       shift and go to state 26
    MOVER           shift and go to state 27
    INC             shift and go to state 28
    DEC             shift and go to state 29
    INI             shift and go to state 30

    repita                         shift and go to state 14
    expresion                      shift and go to state 38
    condicion1                     shift and go to state 12
    condicion2                     shift and go to state 13
    hacer                          shift and go to state 15
    funcion                        shift and go to state 16
    llamarProc                     shift and go to state 17
    empty                          shift and go to state 36
    Aleatorio                      shift and go to state 22
    Mover                          shift and go to state 23
    funcionAlge                    shift and go to state 24

state 15

    (14) expresion -> hacer . expresion
    (11) expresion -> . condicion1 expresion
    (12) expresion -> . condicion2 expresion
    (13) expresion -> . repita expresion
    (14) expresion -> . hacer expresion
    (15) expresion -> . funcion expresion
    (16) expresion -> . llamarProc expresion
    (17) expresion -> . empty empty
    (18) condicion1 -> . ENCASO cond1Aux1 FINENCASO PUNTOCOMA
    (23) condicion2 -> . ENCASO ID cond2Aux1 FINENCASO PUNTOCOMA
    (36) repita -> . REPITA LLAVE_IZQ expresion LLAVE_DER HASTAENCONTRAR ID condicion sentencia PUNTOCOMA
    (37) hacer -> . DESDE ID IGUAL sentencia HASTA sentencia HAGA LLAVE_IZQ expresion LLAVE_DER FINDESDE PUNTOCOMA
    (38) funcion -> . Aleatorio
    (39) funcion -> . Mover
    (40) funcion -> . funcionAlge
    (64) llamarProc -> . LLAMAR ID PARENTESIS_IZQ parametro PARENTESIS_DER PUNTOCOMA
    (65) empty -> .
    (41) Aleatorio -> . ALEATORIO PARENTESIS_IZQ PARENTESIS_DER PUNTOCOMA
    (42) Mover -> . MOVER PARENTESIS_IZQ paramMover PARENTESIS_DER PUNTOCOMA
    (55) funcionAlge -> . INC PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA
    (56) funcionAlge -> . DEC PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA
    (57) funcionAlge -> . INI PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA

    ENCASO          shift and go to state 19
    REPITA          shift and go to state 20
    DESDE           shift and go to state 21
    LLAMAR          shift and go to state 25
    FIN             reduce using rule 65 (empty -> .)
    LLAVE_DER       reduce using rule 65 (empty -> .)
    FINPROC         reduce using rule 65 (empty -> .)
    ALEATORIO       shift and go to state 26
    MOVER           shift and go to state 27
    INC             shift and go to state 28
    DEC             shift and go to state 29
    INI             shift and go to state 30

    hacer                          shift and go to state 15
    expresion                      shift and go to state 39
    condicion1                     shift and go to state 12
    condicion2                     shift and go to state 13
    repita                         shift and go to state 14
    funcion                        shift and go to state 16
    llamarProc                     shift and go to state 17
    empty                          shift and go to state 36
    Aleatorio                      shift and go to state 22
    Mover                          shift and go to state 23
    funcionAlge                    shift and go to state 24

state 16

    (15) expresion -> funcion . expresion
    (11) expresion -> . condicion1 expresion
    (12) expresion -> . condicion2 expresion
    (13) expresion -> . repita expresion
    (14) expresion -> . hacer expresion
    (15) expresion -> . funcion expresion
    (16) expresion -> . llamarProc expresion
    (17) expresion -> . empty empty
    (18) condicion1 -> . ENCASO cond1Aux1 FINENCASO PUNTOCOMA
    (23) condicion2 -> . ENCASO ID cond2Aux1 FINENCASO PUNTOCOMA
    (36) repita -> . REPITA LLAVE_IZQ expresion LLAVE_DER HASTAENCONTRAR ID condicion sentencia PUNTOCOMA
    (37) hacer -> . DESDE ID IGUAL sentencia HASTA sentencia HAGA LLAVE_IZQ expresion LLAVE_DER FINDESDE PUNTOCOMA
    (38) funcion -> . Aleatorio
    (39) funcion -> . Mover
    (40) funcion -> . funcionAlge
    (64) llamarProc -> . LLAMAR ID PARENTESIS_IZQ parametro PARENTESIS_DER PUNTOCOMA
    (65) empty -> .
    (41) Aleatorio -> . ALEATORIO PARENTESIS_IZQ PARENTESIS_DER PUNTOCOMA
    (42) Mover -> . MOVER PARENTESIS_IZQ paramMover PARENTESIS_DER PUNTOCOMA
    (55) funcionAlge -> . INC PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA
    (56) funcionAlge -> . DEC PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA
    (57) funcionAlge -> . INI PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA

    ENCASO          shift and go to state 19
    REPITA          shift and go to state 20
    DESDE           shift and go to state 21
    LLAMAR          shift and go to state 25
    FIN             reduce using rule 65 (empty -> .)
    LLAVE_DER       reduce using rule 65 (empty -> .)
    FINPROC         reduce using rule 65 (empty -> .)
    ALEATORIO       shift and go to state 26
    MOVER           shift and go to state 27
    INC             shift and go to state 28
    DEC             shift and go to state 29
    INI             shift and go to state 30

    funcion                        shift and go to state 16
    expresion                      shift and go to state 40
    condicion1                     shift and go to state 12
    condicion2                     shift and go to state 13
    repita                         shift and go to state 14
    hacer                          shift and go to state 15
    llamarProc                     shift and go to state 17
    empty                          shift and go to state 36
    Aleatorio                      shift and go to state 22
    Mover                          shift and go to state 23
    funcionAlge                    shift and go to state 24

state 17

    (16) expresion -> llamarProc . expresion
    (11) expresion -> . condicion1 expresion
    (12) expresion -> . condicion2 expresion
    (13) expresion -> . repita expresion
    (14) expresion -> . hacer expresion
    (15) expresion -> . funcion expresion
    (16) expresion -> . llamarProc expresion
    (17) expresion -> . empty empty
    (18) condicion1 -> . ENCASO cond1Aux1 FINENCASO PUNTOCOMA
    (23) condicion2 -> . ENCASO ID cond2Aux1 FINENCASO PUNTOCOMA
    (36) repita -> . REPITA LLAVE_IZQ expresion LLAVE_DER HASTAENCONTRAR ID condicion sentencia PUNTOCOMA
    (37) hacer -> . DESDE ID IGUAL sentencia HASTA sentencia HAGA LLAVE_IZQ expresion LLAVE_DER FINDESDE PUNTOCOMA
    (38) funcion -> . Aleatorio
    (39) funcion -> . Mover
    (40) funcion -> . funcionAlge
    (64) llamarProc -> . LLAMAR ID PARENTESIS_IZQ parametro PARENTESIS_DER PUNTOCOMA
    (65) empty -> .
    (41) Aleatorio -> . ALEATORIO PARENTESIS_IZQ PARENTESIS_DER PUNTOCOMA
    (42) Mover -> . MOVER PARENTESIS_IZQ paramMover PARENTESIS_DER PUNTOCOMA
    (55) funcionAlge -> . INC PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA
    (56) funcionAlge -> . DEC PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA
    (57) funcionAlge -> . INI PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA
